v1: implement weeks 7-12 — worker engine, REST API, observability, smoke tests